add index colors

--- a/src/angular/manager/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.scss
+++ b/src/angular/manager/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.scss
@@ -32,3 +32,12 @@
 	height: calc(100% - 94px);
 	width: 100%;
 }
+::ng-deep .bar-sxrt {
+    fill: #7CFC00 !important;
+}
+::ng-deep .bar-icga {
+    fill: #eff542 !important;
+}
+::ng-deep .bar-ivv {
+    fill: #ff0000 !important;
+}
