--- a/frontend/src/angular/src/app/login/component/login/login.component.html
+++ b/frontend/src/angular/src/app/login/component/login/login.component.html
@@ -6,13 +6,13 @@
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Username" tabindex="1" formControlName="FormFields.Username"> 
+							i18n-placeholder placeholder="Username" tabindex="1" formControlName="{{FormFields.Username}}"> 
 					</mat-form-field>
 				</li>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Password" tabindex="2" formControlName="FormFields.Password" type="password">
+							i18n-placeholder placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
 					</mat-form-field>
 				</li>
 				<li *ngIf="loginFailed" i18n class="errorText">
@@ -31,17 +31,17 @@
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Username" tabindex="1" formControlName="FormFields.Username"> 
+							i18n-placeholder placeholder="Username" tabindex="1" formControlName="{{FormFields.Username}}"> 
 					</mat-form-field>
 				</li>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Password" tabindex="2" formControlName="FormFields.Password" type="password">
+							i18n-placeholder placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
 					</mat-form-field>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Password" tabindex="3" formControlName="FormFields.Password2" type="password">
+							i18n-placeholder placeholder="Password" tabindex="3" formControlName="{{FormFields.Password2}}" type="password">
 					</mat-form-field>
 				</li>
 				<li *ngIf="!pwMatching" i18n class="errorText">
@@ -50,7 +50,7 @@
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Email" tabindex="4" formControlName="FormFields.Email">
+							i18n-placeholder placeholder="Email" tabindex="4" formControlName="{{FormFields.Email}}">
 					</mat-form-field>
 				</li>			
 				<li *ngIf="signinFailed" i18n class="errorText">
