--- a/frontend/src/angular/src/app/portfolios/components/add-symbol/add-symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/add-symbol/add-symbol.component.html
@@ -3,7 +3,7 @@
 			<ul class="list-style">
 				<li>
 					<mat-form-field class="form-field"> 
-						<input matInput type="text" [matAutocomplete]="autoName" formControlName="symbolName"
+						<input matInput type="text" [matAutocomplete]="autoName" formControlName="{{FormFields.SymbolName}}"
 							i18n-placeholder placeholder="symbolName" tabindex="1">
 						<mat-autocomplete autoActiveFirstOption #autoName="matAutocomplete" (optionSelected)="symbolSelected($event)">
       						<mat-option *ngFor="let symbol of symbolsName | async" [value]="symbol" 
@@ -15,7 +15,7 @@
 				</li>
 				<li>
 					<mat-form-field class="form-field"> 
-						<input matInput type="text" [matAutocomplete]="autoSymbol" formControlName="symbolSymbol"
+						<input matInput type="text" [matAutocomplete]="autoSymbol" formControlName="{{FormFields.SymbolSymbol}}"
 							i18n-placeholder placeholder="symbol" tabindex="2">
 						<mat-autocomplete autoActiveFirstOption #autoSymbol="matAutocomplete" (optionSelected)="symbolSelected($event)">
       						<mat-option *ngFor="let symbol of symbolsSymbol | async" [value]="symbol" 
@@ -27,14 +27,14 @@
 				</li>
 				<li>
 					<mat-form-field class="form-field"> 
-						<input matInput type="text" formControlName="symbolWeight" (keyup)="updateSymbolWeight()" 
+						<input matInput type="text" formControlName="{{FormFields.SymbolWeight}}" (keyup)="updateSymbolWeight()" 
 							i18n-placeholder placeholder="weight" tabindex="3">
 					</mat-form-field>
 				</li>
 				<li>
 					<mat-form-field> 
-						<mat-label>Add date</mat-label>
-  						<input matInput [matDatepicker]="picker1" formControlName="createdAt">
+						<mat-label i18n>Add date</mat-label>
+  						<input matInput [matDatepicker]="picker1" formControlName="{{FormFields.CreatedAt}}">
   						<mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
   						<mat-datepicker #picker1></mat-datepicker>
 					</mat-form-field>
