feat: fix frontend

--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
@@ -26,7 +26,7 @@
 	</mat-action-list>
   </mat-sidenav>
   <mat-sidenav-content opened mode="side">
-	<app-portfolio-table [localPortfolios]="portfolios" *ngIf="showPortfolioTable"></app-portfolio-table>
+	<app-portfolio-table [localPortfolio]="myPortfolio" *ngIf="showPortfolioTable"></app-portfolio-table>
 	<app-portfolio-charts [selPortfolio]="myPortfolio" *ngIf="!showPortfolioTable"></app-portfolio-charts>
   </mat-sidenav-content>
 </mat-sidenav-container>
