--- a/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.scss
@@ -9,3 +9,11 @@
 table {
   width: 100%;
 }
+
+.symbol-name {
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 15vw;
+  text-overflow: ellipsis;
+  padding-right: 24px;
+}
