--- a/frontend/src/angular/src/app/login/component/login/login.component.html
+++ b/frontend/src/angular/src/app/login/component/login/login.component.html
@@ -39,7 +39,7 @@
 						<input matInput
 							i18n-placeholder placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
 					</mat-form-field>
-					<mat-form-field> 
+					<mat-form-field class="spacer"> 
 						<input matInput
 							i18n-placeholder placeholder="Password" tabindex="3" formControlName="{{FormFields.Password2}}" type="password">
 					</mat-form-field>
