--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol-overview/symbol-overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol-overview/symbol-overview.component.html
@@ -1,1 +1,7 @@
-<p>symbol-overview works!</p>
+<div>
+   <div>
+      <span i18n>Symbol: {{serviceUtils.replacePortfolioSymbol(symbol?.symbol)}}</span>
+      <span i18n>Name: {{symbol?.name}}</span>
+   </div>
+   <div></div>
+</div>
