--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-	<span i18n>Portfolio {{portfolioName}}</span>
+	<span i18n>Portfolio {{portfolio?.name}}</span>
 	<span class="example-fill-remaining-space"></span>
 	<span class="custom-spinner" *ngIf="reloadData">
 		<mat-progress-spinner
@@ -21,7 +21,7 @@
 		</mat-action-list>	
 	</mat-sidenav>
 	<mat-sidenav-content opened mode="side">
-		<app-symbol *ngIf="showSymbol" [portfolioId]="portfolioId" [symbol]="selSymbol" [showSymbol]="showSymbol" (loadingData)="updateReloadData($event)"></app-symbol>
-		<app-symbol-overview *ngIf="!showSymbol" [portfolioId]="portfolioId" [symbol]="selSymbol"></app-symbol-overview>
+		<app-symbol *ngIf="showSymbol" [portfolioId]="portfolio?.id" [symbol]="selSymbol" [showSymbol]="showSymbol" (loadingData)="updateReloadData($event)"></app-symbol>
+		<app-symbol-overview *ngIf="!showSymbol" [portfolio]="portfolio" [symbol]="selSymbol"></app-symbol-overview>
 	</mat-sidenav-content>
 </mat-sidenav-container>
