--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol-overview/symbol-overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol-overview/symbol-overview.component.html
@@ -5,11 +5,18 @@
    </div>
    <div class="text-container">
       <span class="symbol-data" i18n>Weight: {{symbol?.weight | number:'1.0-0' }}</span>
-      <span class="symbol-data" i18n>Changed at: {{symbol?.changedAt | date:'mediumDate' }}</span>
+      <span class="symbol-data" i18n>Changed at: {{getPortfolioElement()?.createdAt | date:'mediumDate' }}</span>
       <span class="symbol-data" i18n>Currency: {{symbol?.currencyKey }}</span>
    </div>
    <div class="text-container">
       <span class="symbol-data" i18n>Sector: {{ symbol?.sector ? symbol?.sector : symbol?.name }}</span>
       <span class="symbol-data" i18n>Industry: {{ symbol?.industry ? symbol?.industry : symbol?.name }}</span>
+   </div>
+   <div class="text-container">
+   	  <span class="symbol-data" i18n>Address: {{!symbol?.address ? '--' : symbol?.address }}</span>
+   	  <span class="symbol-data" i18n>Country: {{!symbol?.country ? '--' : symbol?.country }}</span>
+   </div>
+   <div class="text-container">
+   	  <span class="symbol-data" i18n>Description: {{!symbol?.description ? '--' : symbol?.description }}</span>
    </div>
 </div>
