--- a/frontend/src/angular/src/app/portfolios/components/new-portfolio/new-portfolio.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/new-portfolio/new-portfolio.component.html
@@ -4,23 +4,23 @@
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Portfolioname" tabindex="1" formControlName="{{FormFields.PortfolioName}}"> 
+							i18n-placeholder="@@newPortfolioPortfolioName" placeholder="Portfolioname" tabindex="1" formControlName="{{FormFields.PortfolioName}}"> 
 					</mat-form-field>
 				</li>
 				<li>
 					<mat-form-field> 
-						<mat-label i18n>Creation date</mat-label>
+						<mat-label i18n="@@newPortfolioCreationDate">Creation date</mat-label>
   						<input matInput [matDatepicker]="picker1" formControlName="{{FormFields.CreatedAt}}">
   						<mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
   						<mat-datepicker #picker1></mat-datepicker>
 					</mat-form-field>
 				</li>
-				<li *ngIf="!formValid" i18n class="errorText">
+				<li *ngIf="!formValid" i18n="@@newPortfolioInputInvalid" class="errorText">
 					Input invalid
 				</li>
 				<li>
-					<button mat-button (click)="onAddClick()" [disabled]="!formValid" tabindex="-1" i18n>Ok</button>
-					<button mat-button (click)="onCancelClick()" tabindex="-1" i18n>Cancel</button>
+					<button mat-button (click)="onAddClick()" [disabled]="!formValid" tabindex="-1" i18n="@@ok">Ok</button>
+					<button mat-button (click)="onCancelClick()" tabindex="-1" i18n="@@cancel">Cancel</button>
 				</li>
 			</ul>
 		</form>
