--- a/frontend/src/angular/src/app/login/component/login/login.component.html
+++ b/frontend/src/angular/src/app/login/component/login/login.component.html
@@ -1,64 +1,64 @@
 <div mat-dialog-content>
 <mat-tab-group> 
-	<mat-tab i18n-label label="Login">
+	<mat-tab i18n-label="@@loginLogin" label="Login">
 		<form [formGroup]="loginForm" novalidate>  
 			<ul>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Username" tabindex="1" formControlName="{{FormFields.Username}}"> 
+							i18n-placeholder="@@username" placeholder="Username" tabindex="1" formControlName="{{FormFields.Username}}"> 
 					</mat-form-field>
 				</li>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
+							i18n-placeholder="@@password" placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
 					</mat-form-field>
 				</li>
-				<li *ngIf="loginFailed" i18n class="errorText">
+				<li *ngIf="loginFailed" i18n="@@loginLoginFailed" class="errorText">
 					Login Failed
 				</li>
 				<li>
-					<button mat-button (click)="onLoginClick()" [disabled]="!loginForm.valid" tabindex="-1" i18n>Ok</button>
-					<button mat-button (click)="onCancelClick()" tabindex="-1" i18n>Cancel</button>
+					<button mat-button (click)="onLoginClick()" [disabled]="!loginForm.valid" tabindex="-1" i18n="@@ok">Ok</button>
+					<button mat-button (click)="onCancelClick()" tabindex="-1" i18n="@@cancel">Cancel</button>
 				</li>
 			</ul>
 		</form>
 	</mat-tab> 
-	<mat-tab i18n-label label="Signin">
+	<mat-tab i18n-label="@@signin" label="Signin">
 		<form [formGroup]="signinForm" novalidate>
 			<ul>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Username" tabindex="1" formControlName="{{FormFields.Username}}"> 
+							i18n-placeholder="@@username" placeholder="Username" tabindex="1" formControlName="{{FormFields.Username}}"> 
 					</mat-form-field>
 				</li>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
+							i18n-placeholder="@@password" placeholder="Password" tabindex="2" formControlName="{{FormFields.Password}}" type="password">
 					</mat-form-field>
 					<mat-form-field class="spacer"> 
 						<input matInput
-							i18n-placeholder placeholder="Password" tabindex="3" formControlName="{{FormFields.Password2}}" type="password">
+							i18n-placeholder="@@password" placeholder="Password" tabindex="3" formControlName="{{FormFields.Password2}}" type="password">
 					</mat-form-field>
 				</li>
-				<li *ngIf="!pwMatching" i18n class="errorText">
+				<li *ngIf="!pwMatching" i18n="@@loginPasswordsNoMatch" class="errorText">
 					Passwords do not match
 				</li>
 				<li>
 					<mat-form-field> 
 						<input matInput
-							i18n-placeholder placeholder="Email" tabindex="4" formControlName="{{FormFields.Email}}">
+							i18n-placeholder="@@email" placeholder="Email" tabindex="4" formControlName="{{FormFields.Email}}">
 					</mat-form-field>
 				</li>			
-				<li *ngIf="signinFailed" i18n class="errorText">
+				<li *ngIf="signinFailed" i18n="@@loginSigninFailed" class="errorText">
 					Signin Failed
 				</li>	
 				<li>
-					<button mat-button (click)="onSigninClick()" [disabled]="!signinForm.valid" tabindex="-1"  i18n>Ok</button>
-					<button mat-button (click)="onCancelClick()" tabindex="-1" i18n>Cancel</button>
+					<button mat-button (click)="onSigninClick()" [disabled]="!signinForm.valid" tabindex="-1"  i18n="@@ok">Ok</button>
+					<button mat-button (click)="onCancelClick()" tabindex="-1" i18n="@@cancel">Cancel</button>
 				</li>
 			</ul>
 		</form>
