--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
@@ -1,8 +1,8 @@
 <div>
 <mat-toolbar color="primary">
-	<span i18n>Portfolio Manager</span>
+	<span i18n="@@overviewPortfolioManger">Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
-	<span class="header-space"><button mat-button (click)="showConfig()" [disabled]="!!dialogRef" i18n>Config</button></span>
+	<span class="header-space"><button mat-button (click)="showConfig()" [disabled]="!!dialogRef" i18n="@@config">Config</button></span>
 	<span class="custom-spinner header-space" *ngIf="importingSymbols">
 		<mat-progress-spinner
 					diameter="32" 
@@ -10,13 +10,13 @@
 					color="primary">
 		</mat-progress-spinner>
 	</span>
-	<span class="header-space"><button mat-button (click)="importSymbols()" i18n>Import Symbols</button></span>
-	<span><button mat-button (click)="logout()" i18n>Logout</button></span>
+	<span class="header-space"><button mat-button (click)="importSymbols()" i18n="@@overviewImportSymbols">Import Symbols</button></span>
+	<span><button mat-button (click)="logout()" i18n="@@logout">Logout</button></span>
 </mat-toolbar>
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
   <mat-sidenav opened mode="side" class="portfolio-list">
   	<div class="new-portfolio">
-  		<button mat-raised-button (click)="newPortfolio()" i18n>New Portfolio</button>
+  		<button mat-raised-button (click)="newPortfolio()" i18n="@@overviewNewPortfolio">New Portfolio</button>
   	</div>
   	<mat-action-list *ngFor="let portfolio of portfolios">
   		<div class="portfolio-line">
