--- a/frontend/src/angular/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
@@ -1,10 +1,10 @@
 <div class="my-container">
 <div class="text-container">
-	<span class="my-span" i18n="@@PortfolioChartName">Portfolio: {{selPortfolio.name}}</span> 
-	<span class="my-span" i18n="@@PortfolioChartStartDate">Start Date: {{startDate | date:'d.M.yyyy'}}</span>
+	<span class="my-span" i18n="@@portfolioChartsName">Portfolio: {{selPortfolio.name}}</span> 
+	<span class="my-span" i18n="@@portfolioChartsStartDate">Start Date: {{startDate | date:'d.M.yyyy'}}</span>
 </div>
 <div class="text-container">
-	<label id="my-radio-group-label" i18n>Pick your timeframe:</label>
+	<label id="my-radio-group-label" i18n="@@pickTimeframe">Pick your timeframe:</label>
 	<mat-radio-group
 	  aria-labelledby="my-radio-group-label"
 	  class="my-radio-group" (change)="chartPeriodChanged()"
@@ -15,11 +15,11 @@
 	</mat-radio-group>
 </div>
 <div class="text-container">
-	<label id="my-checkbox-group-label" i18n>Pick your comparison index:</label>
+	<label id="my-checkbox-group-label" i18n="@@pickCompIndex">Pick your comparison index:</label>
 	<span>
-		<mat-checkbox class="my-checkbox" [(ngModel)]="showES50" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.EUROSTOXX50)" i18n>EuroStoxx 50</mat-checkbox>
-		<mat-checkbox class="my-checkbox" [(ngModel)]="showMsciCH" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.MSCI_CHINA)" i18n>Msci China</mat-checkbox>
-		<mat-checkbox class="my-checkbox" [(ngModel)]="showSP500" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n>S&P 500</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [(ngModel)]="showES50" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.EUROSTOXX50)" i18n="@@es50">EuroStoxx 50</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [(ngModel)]="showMsciCH" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.MSCI_CHINA)" i18n="@@msciChina">Msci China</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [(ngModel)]="showSP500" [disabled]="chartsLoading" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n="@@sAndP500">S&P 500</mat-checkbox>
 	</span>
 </div>
 <div *ngIf="chartsLoading" class="center-div">
