--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-	<span i18n>Portfolio {{portfolio?.name}}</span>
+	<span i18n="@@portfolioPortfolio">Portfolio {{portfolio?.name}}</span>
 	<span class="example-fill-remaining-space"></span>
 	<span class="custom-spinner" *ngIf="reloadData">
 		<mat-progress-spinner
