--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol/symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol/symbol.component.html
@@ -1,27 +1,27 @@
 <div class="base-container">
 <div>
 	<div class="text-container">
-	   <span class="symbol-data" i18n>Symbol: {{!symbol ? 'none' : serviceUtils.replacePortfolioSymbol(symbol?.symbol)}}</span>
-	   <span class="symbol-data" i18n>Name: {{!symbol ? 'none' : symbol?.name}}</span>
+	   <span class="symbol-data" i18n="@@symbol">Symbol: {{!symbol ? 'none' : serviceUtils.replacePortfolioSymbol(symbol?.symbol)}}</span>
+	   <span class="symbol-data" i18n="@@name">Name: {{!symbol ? 'none' : symbol?.name}}</span>
 	</div>
 	<div class="text-container">
-		<span class="symbol-data" i18n>Start Date: {{symbolData?.start | date:'mediumDate' }}</span>
-		<span class="symbol-data" i18n>End Date: {{symbolData?.end | date:'mediumDate' }}</span>
-		<span class="symbol-data" i18n>Open: {{symbolData?.open | number:'1.2-2'}}</span>
-		<span class="symbol-data" i18n>High: {{symbolData?.high | number:'1.2-2'}}</span>
-		<span class="symbol-data" i18n>Low: {{symbolData?.low | number:'1.2-2'}}</span>
-		<span class="symbol-data" i18n>Close: {{symbolData?.close | number:'1.2-2'}}</span>		
+		<span class="symbol-data" i18n="@@symbolStartDate">Start Date: {{symbolData?.start | date:'mediumDate' }}</span>
+		<span class="symbol-data" i18n="@@symbolEndDate">End Date: {{symbolData?.end | date:'mediumDate' }}</span>
+		<span class="symbol-data" i18n="@@symbolOpen">Open: {{symbolData?.open | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n="@@symbolHigh">High: {{symbolData?.high | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n="@@symbolLow">Low: {{symbolData?.low | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n="@@symbolClose">Close: {{symbolData?.close | number:'1.2-2'}}</span>		
 	</div>
 	<div class="text-container">
-	    <span class="symbol-data" i18n>Currency: {{ symbol?.currencyKey }}</span>
-		<span class="symbol-data" i18n>Average Volume: {{symbolData?.avgVolume | number:'1.0-0' }}</span>
-		<span class="symbol-data" i18n>Average Close: {{symbolData?.avgClose | number:'1.2-2'}}</span>
-		<span class="symbol-data" i18n>Median Close: {{symbolData?.medianClose | number:'1.2-2'}}</span>
-		<span class="symbol-data" i18n>Volatility Close: {{!symbolData.volatilityClose ? '' :  (symbolData.volatilityClose * 100) | number:'1.2-2'}}%</span>
+	    <span class="symbol-data" i18n="@@symbolCurrency">Currency: {{ symbol?.currencyKey }}</span>
+		<span class="symbol-data" i18n="@@symbolAvgVolume">Average Volume: {{symbolData?.avgVolume | number:'1.0-0' }}</span>
+		<span class="symbol-data" i18n="@@symbolAvgClose">Average Close: {{symbolData?.avgClose | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n="@@symbolMedClose">Median Close: {{symbolData?.medianClose | number:'1.2-2'}}</span>
+		<span class="symbol-data" i18n="@@symbolVolClose">Volatility Close: {{!symbolData.volatilityClose ? '' :  (symbolData.volatilityClose * 100) | number:'1.2-2'}}%</span>
 	</div>
 </div>
 <div class="text-container">
-	<label id="my-radio-group-label" i18n>Pick your timeframe:</label>
+	<label id="my-radio-group-label" i18n="@@pickTimeframe">Pick your timeframe:</label>
 	<mat-radio-group
 	  aria-labelledby="my-radio-group-label"
 	  class="my-radio-group" (change)="quotePeriodChanged()"
@@ -32,15 +32,15 @@
 	</mat-radio-group>
 </div>
 <div class="text-container">
-	<label id="my-checkbox-group-label" i18n>Pick your comparison index:</label>
+	<label id="my-checkbox-group-label" i18n="@@pickCompIndex">Pick your comparison index:</label>
 	<span>
-		<mat-checkbox class="my-checkbox" [(ngModel)]="showES50" [disabled]="quotesLoading || !serviceUtils.isPortfolioSymbol(symbol)" (change)="compIndexUpdate($event.checked, ComparisonIndex.EUROSTOXX50)" i18n>EuroStoxx 50</mat-checkbox>
-		<mat-checkbox class="my-checkbox" [(ngModel)]="showMsciCH" [disabled]="quotesLoading || !serviceUtils.isPortfolioSymbol(symbol)" (change)="compIndexUpdate($event.checked, ComparisonIndex.MSCI_CHINA)" i18n>Msci China</mat-checkbox>
-		<mat-checkbox class="my-checkbox" [(ngModel)]="showSP500" [disabled]="quotesLoading || !serviceUtils.isPortfolioSymbol(symbol)" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n>S&P 500</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [(ngModel)]="showES50" [disabled]="quotesLoading || !serviceUtils.isPortfolioSymbol(symbol)" (change)="compIndexUpdate($event.checked, ComparisonIndex.EUROSTOXX50)" i18n="@@es50">EuroStoxx 50</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [(ngModel)]="showMsciCH" [disabled]="quotesLoading || !serviceUtils.isPortfolioSymbol(symbol)" (change)="compIndexUpdate($event.checked, ComparisonIndex.MSCI_CHINA)" i18n="@@msciChina">Msci China</mat-checkbox>
+		<mat-checkbox class="my-checkbox" [(ngModel)]="showSP500" [disabled]="quotesLoading || !serviceUtils.isPortfolioSymbol(symbol)" (change)="compIndexUpdate($event.checked, ComparisonIndex.SP500)" i18n="@@sAndP500">S&P 500</mat-checkbox>
 	</span>
 </div>
 <div *ngIf="!symbol" class="chart-container center-div">
-	<div i18>Please select an instrument</div>
+	<div i18="@@symbolSelectInstrument">Please select an instrument</div>
 </div>
 <div *ngIf="symbol" #chartContainer class="chart-container">
 	<sc-line-chart [chartPoints]="chartPoints" [replaceName]="portfolioName" [replaceSymbol]="portfolioSymbol"></sc-line-chart>				
