feat: frontend next step

--- a/frontend/src/angular/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
@@ -4,7 +4,7 @@
     <app-portfolio-comparison [selPortfolio]="selPortfolio"></app-portfolio-comparison>
   </mat-tab>
   <mat-tab i18n-label="@@portfolioChartsSectors" label="Portfolio Sectors">
-    <app-portfolio-sectors></app-portfolio-sectors>
+    <app-portfolio-sectors [selPortfolio]="selPortfolio"></app-portfolio-sectors>
   </mat-tab>
 </mat-tab-group>
 </div>
