--- a/frontend/src/angular/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-charts/portfolio-charts.component.html
@@ -1,10 +1,14 @@
 <div class="my-container">
 <mat-tab-group dynamicHeight>
   <mat-tab i18-label="@@portfolioChartsComparison" label="Portfolio Comparison">
-    <app-portfolio-comparison [selPortfolio]="selPortfolio"></app-portfolio-comparison>
+    <ng-template matTabContent>
+      <app-portfolio-comparison [selPortfolio]="selPortfolio"></app-portfolio-comparison>
+    </ng-template>
   </mat-tab>
   <mat-tab i18n-label="@@portfolioChartsSectors" label="Portfolio Sectors">
-    <app-portfolio-sectors [selPortfolio]="selPortfolio"></app-portfolio-sectors>
+    <ng-template matTabContent>
+      <app-portfolio-sectors [selPortfolio]="selPortfolio"></app-portfolio-sectors>
+    </ng-template>
   </mat-tab>
 </mat-tab-group>
 </div>
