feat: add donut

--- a/frontend/src/angular/src/app/portfolios/components/portfolio-sectors/portfolio-sectors.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-sectors/portfolio-sectors.component.html
@@ -5,6 +5,6 @@
 			color="primary"></mat-progress-spinner>
 </div>
 <div *ngIf="!chartsLoading" class="chart-container">
-	<!-- <sc-donut-chart [chartSlices]="chartSlices"></sc-donut-chart> -->
+	<sc-donut-chart [chartSlices]="chartSlices"></sc-donut-chart>
 </div>
 </div>
