--- a/frontend/src/angular/src/app/portfolios/components/portfolio-sectors/portfolio-sectors.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-sectors/portfolio-sectors.component.scss
@@ -14,7 +14,8 @@
 
 .hide-me {	
 	visibility: hidden;
-	
+	height: 0;
+	width: 0;	
 }
  
 .my-content {
@@ -26,7 +27,7 @@
     $lime: mat.get-color-from-palette(mat.$lime-palette, 200);
     $orange: mat.get-color-from-palette(mat.$orange-palette, 200);
     $gray: mat.get-color-from-palette(mat.$gray-palette, 200);
-    @debug "#{$red},#{$purple},#{$blue},#{$cyan},#{$green},#{$lime},#{$orange},#{$gray}";
+    //@debug "#{$red},#{$purple},#{$blue},#{$cyan},#{$green},#{$lime},#{$orange},#{$gray}";
 	&::before {
 		content: "#{$red},#{$purple},#{$blue},#{$cyan},#{$green},#{$lime},#{$orange},#{$gray}";
 	}
