--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-comparison/portfolio-comparison.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-comparison/portfolio-comparison.component.html
@@ -1,6 +1,6 @@
 <div class="my-container">
 <div class="text-container">
-	<span class="my-span" i18n="@@portfolioChartsName">Portfolio: {{selPortfolio.name}}</span> 
+	<span class="my-span" i18n="@@portfolioChartsName">Portfolio: {{selPortfolio?.name}}</span> 
 	<span class="my-span" i18n="@@portfolioChartsStartDate">Start Date: {{startDate | date:'d.M.yyyy'}}</span>
 </div>
 <div class="text-container">
