--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-sectors/portfolio-sectors.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-sectors/portfolio-sectors.component.html
@@ -11,7 +11,7 @@
        	 <li *ngFor="let chartSlice of chartSlices.chartSlices">
        	    <span class="my-span">{{chartSlice.name}}: </span>
        	    <span>{{(chartSlice.value / slicesSum * 100) | number: '1.0-2'}} %</span>
-       	    <span><mat-icon class="my-icon" [ngStyle]="{'color': chartSlice.color, 'padding-left': '10px'}">check_circle</mat-icon></span>
+       	    <span><mat-icon class="my-icon" [ngStyle]="{'color': chartSlice.color, 'padding-left': '10px'}">incomplete_circle</mat-icon></span>
        	 </li>
        </ol>
     </div>
