--- a/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/portfolio-table/portfolio-table.component.html
@@ -8,7 +8,9 @@
 
     <ng-container matColumnDef="stocks">
       <th mat-header-cell *matHeaderCellDef i18n="@@portfolioTableStocks"> Stocks </th>
-      <td mat-cell *matCellDef="let element" [class.portfolio-line]="element.id === localPortfolio.id" class="table-cell"> {{ !element.symbols ? '--' : element.symbols.length -1}} </td>
+      <td mat-cell *matCellDef="let element" [class.portfolio-line]="element.id === localPortfolio.id" class="table-cell"> 
+        {{ !element.symbols || element.id !== localPortfolio.id  ? (!!element?.weight ? element.weight : '--') : element.symbols.length -1}} 
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="month1">
