--- a/frontend/src/angular/src/app/portfolios/components/dialog-spinner/dialog-spinner.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/dialog-spinner/dialog-spinner.component.scss
@@ -10,16 +10,14 @@
    See the License for the specific language governing permissions and
    limitations under the License.
  */
- 
-.container{
+
+.header {
+	text-align: center;
+}
+
+ .container{
 	display: flex;	
 	width: 100%;	
 	justify-content: center;
 	align-content: center;
-}
-.content {
-	margin-top: 50px;
-}
-.example-margin {
-  margin: 0 10px;
 }
