--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
@@ -2,6 +2,7 @@
 <mat-toolbar color="primary">
 	<span i18n="@@overviewPortfolioManger">Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
+	<span class="header-space"><button mat-button (click)="showFinancialsImport()" [disabled]="!!financialsDialogRef" i18n="@@importFinancials">Import Financials</button></span>
 	<span class="header-space"><button mat-button (click)="showConfig()" [disabled]="!!dialogRef" i18n="@@config">Config</button></span>
 	<span class="custom-spinner header-space" *ngIf="importingSymbols">
 		<mat-progress-spinner
