--- a/frontend/src/angular/src/app/portfolios/components/import-financials/import-financials.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/import-financials/import-financials.component.html
@@ -1,11 +1,11 @@
-<div mat-dialog-content>
+<div mat-dialog-content class="mat-typography">
     <form [formGroup]="financialsForm" novalidate>        
 			<ul class="list-style">
 				<li>
-					<h1 i18n="@@financialDataImport">Financialdata import</h1>
-				</li>
-				<li>
-					<span i18n="@@filepath">Filepath: </span><span>{{filepath}}</span>
+					<h1 class="mat-h1" i18n="@@financialDataImport">Financialdata import</h1>
+				</li>				
+				<li class="file-path">
+					<span class="mat-body" i18n="@@filepath">Filepath: </span><span class="mat-body">{{filepath}}</span>
 				</li>
 				<li>
 					<mat-form-field class="form-field"> 
@@ -15,7 +15,7 @@
 					</mat-form-field>
 				</li>
 				<li>
-					<button mat-button (click)="okClick()" [disabled]="!filename || !filepath" tabindex="-1" i18n="@@ok">Ok</button>
+					<button mat-button (click)="okClick()" [disabled]="!filepath || financialsForm.invalid" tabindex="-1" i18n="@@ok">Ok</button>
 					<button mat-button (click)="cancelClick()" tabindex="-1" i18n="@@cancel">Cancel</button>
 				</li>
 			</ul>
