feat: next step

--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.scss
@@ -12,7 +12,7 @@
 	height: 56px;
 	display: flex;
 	align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 	cursor: pointer;
 }
 
