--- a/frontend/src/angular/src/app/financial-data/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/overview/overview.component.html
@@ -1,1 +1,8 @@
-<p>overview works!</p>
+<div>
+<mat-toolbar color="primary">
+	<span i18n="@@overviewFinancialData">Financial Data</span>
+	<span class="example-fill-remaining-space"></span>
+	<span class="header-space"><button mat-button (click)="showFinancialsImport()" i18n="@@importFinancials">Import Financials</button></span>
+	<span><button mat-button (click)="logout()" i18n="@@logout">Logout</button></span>
+</mat-toolbar>
+</div>
