--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.scss
@@ -67,7 +67,7 @@ table {
   flex-direction: column; 
 }
 
-.custom-spinner ::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
+.custom-spinner ::ng-deep .mat-mdc-progress-spinner circle, .mat-mdc-progress-spinner circle {
 	stroke: #ffffff !important;
 }
 	
@@ -75,7 +75,7 @@ table {
 	margin-left: 20px;
 }	
 	
-.mat-table {
+.mat-mdc-table {
   overflow: auto;  
 }
 
