--- a/frontend/src/angular/src/app/financial-data/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/overview/overview.component.html
@@ -2,7 +2,8 @@
 <mat-toolbar color="primary">
 	<span i18n="@@overviewFinancialData">Financial Data</span>
 	<span class="example-fill-remaining-space"></span>
-	<span class="header-space"><button mat-button (click)="showFinancialsImport()" i18n="@@importFinancials">Import Financials</button></span>
-	<span><button mat-button (click)="logout()" i18n="@@logout">Logout</button></span>
+	<span class="header-space"><button mat-flat-button color="primary" (click)="showFinancialsImport()" i18n="@@importFinancials">Import Financials</button></span>
+	<span><button mat-flat-button color="primary" (click)="back()" i18n="@@back">Back</button></span>
+	<span><button mat-flat-button color="primary" (click)="logout()" i18n="@@logout">Logout</button></span>
 </mat-toolbar>
 </div>
