--- a/frontend/src/angular/src/app/login/component/main/main.component.html
+++ b/frontend/src/angular/src/app/login/component/main/main.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
 	<span i18n="@@mainPortfolioManager">Portfolio Manager</span>
 	<span class="example-fill-remaining-space"></span>
-	<span *ngIf="login === null"><button mat-button (click)="openLoginDialog()" i18n="@@login">Login</button></span>		
-	<span *ngIf="login !== null"><button mat-button (click)="logout()" i18n="@@logout">Logout</button></span>
+	<span *ngIf="login === null"><button mat-flat-button color="primary" (click)="openLoginDialog()" i18n="@@login">Login</button></span>		
+	<span *ngIf="login !== null"><button mat-flat-button color="primary" (click)="logout()" i18n="@@logout">Logout</button></span>
 </mat-toolbar>
 <div style="display:none">
 	<span id="onlineAgainMsg" i18n="@@onlineAgainMsg">Your token is expired. To reconnect please logout and login again.</span>
