--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/portfolio/portfolio.component.html
@@ -9,8 +9,8 @@
 		</mat-progress-spinner>
 	</span>
 	<span *ngIf="reloadData" class="spinner-text" i18n>loading...</span>
-	<span><button mat-button (click)="back()" i18n>Back</button></span>
-	<span><button mat-button (click)="logout()" i18n>Logout</button></span>
+	<span><button mat-flat-button color="primary" (click)="back()" i18n>Back</button></span>
+	<span><button mat-flat-button color="primary" (click)="logout()" i18n>Logout</button></span>
 </mat-toolbar>
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
 	<mat-sidenav opened mode="side" class="symbol-list">
