feat: add spinner

--- a/frontend/src/angular/src/app/login/component/main/main.component.html
+++ b/frontend/src/angular/src/app/login/component/main/main.component.html
@@ -4,6 +4,15 @@
 	<span *ngIf="login === null"><button mat-flat-button color="primary" (click)="openLoginDialog()" i18n="@@login">Login</button></span>		
 	<span *ngIf="login !== null"><button mat-flat-button color="primary" (click)="logout()" i18n="@@logout">Logout</button></span>
 </mat-toolbar>
+<div *ngIf="login !== null" class="content-container">
+<h2 class="content-margin">Loading</h2>
+</div>
+<div *ngIf="login !== null" class="content-container">
+<mat-progress-spinner
+			class="content-margin"
+			mode="indeterminate"
+			color="primary"></mat-progress-spinner>
+</div>
 <div style="display:none">
 	<span id="onlineAgainMsg" i18n="@@onlineAgainMsg">Your token is expired. To reconnect please logout and login again.</span>
 </div>
