--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
@@ -16,8 +16,8 @@
 <mat-sidenav-container class="container" [ngStyle]="{'height.px': windowHeight}">
   <mat-sidenav opened mode="side" class="portfolio-list">
   	<div class="new-portfolio">
-  		<button mat-raised-button (click)="newPortfolio()" i18n="@@overviewNewPortfolio">New Portfolio</button>
-  		<button mat-raised-button (click)="showFinancialData()" i18n="@@overviewToFinancialData">To Financial Data</button>
+  		<button mat-raised-button class="button-margin" (click)="newPortfolio()" i18n="@@overviewNewPortfolio">New Portfolio</button>
+  		<button mat-raised-button class="button-margin" (click)="showFinancialData()" i18n="@@overviewToFinancialData">To Financial Data</button>
   	</div>
   	<mat-action-list *ngFor="let portfolio of portfolios">
   		<div class="portfolio-line">
