feat: next step

--- a/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/create-query/create-query.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+<div>
+<h2 i18n="@@createQuerySymbolQuery">Symbol Query</h2>
+<div class="query-item base-query">
+
+</div>
+</div>
 <div cdkDropListGroup>
   <div class="query-container">
     <h2 i18n="@@createQueryAvailableQueryItems">Available Query Items</h2>
